--- a/Interfaces/cs.lproj/InfoWindow.strings
+++ b/Interfaces/cs.lproj/InfoWindow.strings
@@ -15,7 +15,7 @@
 "109.title" = "Zkontrolovat";
 
 /* Class = "NSButtonCell"; title = "URL zdroje:"; ObjectID = "110"; */
-"110.title" = "URL zdroje:";
+"xPF-M9-oZG.title" = "URL zdroje";
 
 /* Class = "NSTextFieldCell"; title = "Jméno:"; ObjectID = "111"; */
 "111.title" = "Jméno:";
@@ -27,7 +27,7 @@
 "115.title" = "Automaticky aktualizovat";
 
 /* Class = "NSButtonCell"; title = "Ověření totožnosti:"; ObjectID = "116"; */
-"116.title" = "Ověření totožnosti:";
+"U0N-RF-bUt.title" = "Ověření totožnosti";
 
 /* Class = "NSTextFieldCell"; title = "Velikost:"; ObjectID = "117"; */
 "117.title" = "Velikost:";
@@ -45,10 +45,10 @@
 "121.title" = "Odebíráno";
 
 /* Class = "NSButtonCell"; title = "Obecné:"; ObjectID = "122"; */
-"122.title" = "Obecné:";
+"i9j-KH-c3D.title" = "Obecné";
 
 /* Class = "NSButtonCell"; title = "Popis:"; ObjectID = "124"; */
-"124.title" = "Popis:";
+"E84-Uo-ybg.title" = "Popis";
 
 /* Class = "NSButtonCell"; title = "Load Full HTML Articles"; ObjectID = "126"; */
 "126.title" = "Load Full HTML Articles";
