--- a/Interfaces/ko.lproj/InfoWindow.strings
+++ b/Interfaces/ko.lproj/InfoWindow.strings
@@ -15,7 +15,7 @@
 "109.title" = "피드 확인";
 
 /* Class = "NSButtonCell"; title = "피드 URL:"; ObjectID = "110"; */
-"110.title" = "피드 URL:";
+"xPF-M9-oZG.title" = "피드 URL";
 
 /* Class = "NSTextFieldCell"; title = "이름:"; ObjectID = "111"; */
 "111.title" = "이름:";
@@ -27,7 +27,7 @@
 "115.title" = "인증 갱신";
 
 /* Class = "NSButtonCell"; title = "인증:"; ObjectID = "116"; */
-"116.title" = "인증:";
+"U0N-RF-bUt.title" = "인증";
 
 /* Class = "NSTextFieldCell"; title = "전체:"; ObjectID = "117"; */
 "117.title" = "전체:";
@@ -45,10 +45,10 @@
 "121.title" = "구독하기";
 
 /* Class = "NSButtonCell"; title = "일반:"; ObjectID = "122"; */
-"122.title" = "일반:";
+"i9j-KH-c3D.title" = "일반";
 
 /* Class = "NSButtonCell"; title = "설명:"; ObjectID = "124"; */
-"124.title" = "설명:";
+"E84-Uo-ybg.title" = "설명";
 
 /* Class = "NSButtonCell"; title = "Use Web Page for Articles"; ObjectID = "126"; */
 "126.title" = "Use Web Page for Articles";
