--- a/Interfaces/pt-BR.lproj/InfoWindow.strings
+++ b/Interfaces/pt-BR.lproj/InfoWindow.strings
@@ -15,25 +15,25 @@
 "109.title" = "Validar";
 
 /* Class = "NSButtonCell"; title = "URL das notícias:"; ObjectID = "110"; */
-"110.title" = "URL das notícias:";
+"xPF-M9-oZG.title" = "URL das notícias";
 
 /* Class = "NSTextFieldCell"; title = "Usuário:"; ObjectID = "111"; */
 "111.title" = "Usuário:";
 
 /* Class = "NSTextFieldCell"; title = "Senha:\n"; ObjectID = "112"; */
-"112.title" = "Senha:\n";
+"112.title" = "Senha:";
 
 /* Class = "NSButtonCell"; title = "Atualizar Autenticação"; ObjectID = "115"; */
 "115.title" = "Atualizar Autenticação";
 
 /* Class = "NSButtonCell"; title = "Autenticação:"; ObjectID = "116"; */
-"116.title" = "Autenticação:";
+"U0N-RF-bUt.title" = "Autenticação";
 
 /* Class = "NSTextFieldCell"; title = "Tamanho:"; ObjectID = "117"; */
 "117.title" = "Tamanho:";
 
 /* Class = "NSTextFieldCell"; title = "Não lido:\n"; ObjectID = "118"; */
-"118.title" = "Não lido:\n";
+"118.title" = "Não lido:";
 
 /* Class = "NSTextFieldCell"; title = "\n"; ObjectID = "119"; */
 "119.title" = "\n";
@@ -45,10 +45,10 @@
 "121.title" = "Assinado";
 
 /* Class = "NSButtonCell"; title = "Geral:"; ObjectID = "122"; */
-"122.title" = "Geral:";
+"i9j-KH-c3D.title" = "Geral";
 
 /* Class = "NSButtonCell"; title = "Descrição:"; ObjectID = "124"; */
-"124.title" = "Descrição:";
+"E84-Uo-ybg.title" = "Descrição";
 
 /* Class = "NSButtonCell"; title = "Use Web Page for Articles"; ObjectID = "126"; */
 "126.title" = "Use Web Page for Articles";
